# bbarm64

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bbarm64-emu-plan.md  context.md  hello_world.c
android_libraries/: README.md  libc.so.stub  libm.so.stub
bbarm64/: .gitignore  direct_test.cpp  findings.md  hello_glibc  hello_glibc_static  hello_simple  hello_world.s  hello_world_arm64  hello_world_c  test_handler.cpp  test_include.cpp  test_minimal.s  test_minimal_arm64  test_segfault  test_segfault.c  test_segfault.s  test_segfault_fix  test_segfault_fix.cpp  test_syscalls.cpp
bbarm64/android_libraries/: sum
bbarm64/rust/: Cargo.toml  build.rs
bbarm64/src/: main.cpp
bbarm64/src/backend/: x86_64_emitter.cpp  x86_64_emitter.hpp  x86_64_lower.hpp
bbarm64/src/cache/: block_chaining.cpp  translation_cache.cpp  translation_cache.hpp
rust/src/: lib.rs
src/: main.cpp
src/backend/: x86_64_emitter.cpp  x86_64_emitter.hpp  x86_64_lower.cpp  x86_64_lower.hpp  x86_64_regalloc.cpp  x86_64_regalloc.hpp
src/cache/: translation_cache.cpp  translation_cache.hpp
src/core/: cpu_context.cpp  cpu_context.hpp  exec_engine.cpp  exec_engine.hpp  memory_manager.hpp
src/decoder/: arm64_decoder.cpp  arm64_decoder.hpp
src/elf/: dynlink.cpp  elf_loader.cpp
src/ir/: ir.hpp  ir_builder.cpp
src/syscall/: syscall_handlers.cpp  syscall_handlers.hpp  syscall_table.cpp  syscall_table.hpp
src/threading/: thread_manager.cpp  tls_emu.cpp  tls_emu.hpp
src/util/: config.hpp  log.cpp  profiler.hpp
tests/: README.md  hello_asm  hello_dynamic  hello_static  hello_world.s
(+17 files in other folders)
